[gd_scene load_steps=13 format=3 uid="uid://b8ivppcd23eh6"]

[ext_resource type="Script" uid="uid://dgyi01grnjw5" path="res://scripts/Game.gd" id="1"]
[ext_resource type="Script" uid="uid://cwxvda3avui20" path="res://scripts/Conductor.gd" id="2"]
[ext_resource type="Script" uid="uid://cw2rjt8xjsqu4" path="res://scripts/NoteSpawner.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://byhp0cl3v6xda" path="res://audio/example_song.wav" id="5"]
[ext_resource type="Script" uid="uid://ds1tt4yoa136i" path="res://scripts/lane_b_gs.gd" id="6_aug50"]
[ext_resource type="Texture2D" uid="uid://bu5rlc60nn01a" path="res://assets/karilane.png" id="7_kiw3p"]
[ext_resource type="Script" uid="uid://wbv6eq8tx1e5" path="res://scripts/laneRenderer.gd" id="8_400sg"]
[ext_resource type="FontFile" uid="uid://bg853ddmcspu6" path="res://fonts/Corporate-Logo-Rounded-Bold-ver3.woff" id="9_g4kob"]

[sub_resource type="Animation" id="Animation_qy1jj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_g4kob"]
resource_name = "fade"
length = 12.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.466667, 6.06667, 12.9333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(5.10186e-06, 0.704981, 0.683001, 1), Color(4.81307e-07, 0.728931, 0.456032, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xj3m"]
_data = {
&"RESET": SubResource("Animation_qy1jj"),
&"fade": SubResource("Animation_g4kob")
}

[sub_resource type="GDScript" id="GDScript_400sg"]

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="Conductor" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("2")
player = NodePath("../AudioStreamPlayer")

[node name="NoteSpawner" type="Node" parent="."]
script = ExtResource("3")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("9_g4kob")
theme_override_font_sizes/font_size = 70
text = "Score: 0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScoreLabel"]
libraries = {
&"": SubResource("AnimationLibrary_3xj3m")
}
autoplay = "fade"
speed_scale = 1.865

[node name="LaneBGs" type="Node2D" parent="."]
visible = false
script = ExtResource("6_aug50")

[node name="Lane0" type="Sprite2D" parent="LaneBGs"]
texture = ExtResource("7_kiw3p")
offset = Vector2(0, -330)

[node name="Lane1" type="Sprite2D" parent="LaneBGs"]
texture = ExtResource("7_kiw3p")
offset = Vector2(0, -330)

[node name="Lane2" type="Sprite2D" parent="LaneBGs"]
texture = ExtResource("7_kiw3p")
offset = Vector2(0, -330)

[node name="Lane3" type="Sprite2D" parent="LaneBGs"]
texture = ExtResource("7_kiw3p")
offset = Vector2(0, -330)

[node name="LaneRenderer" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.5)
script = ExtResource("8_400sg")
fill_color = Color(0, 0.627451, 0.85098, 0.439216)
border_color = Color(9.04858e-06, 0.866411, 0.77943, 1)
border_width = 13.0

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ReadyLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_g4kob")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1

[node name="JudgeLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_400sg")

[node name="Background" type="TextureRect" parent="CenterContainer"]
z_index = -5
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 2

[node name="Effects" type="Node2D" parent="."]
